web/assets/css/override.css
/* ... */
.nav.flex-column {
  padding: .5rem .25rem;
  border-radius: 1rem;
}

.nav-scroller {
  position: relative;
  /* z-index: 2; */
  overflow-y: hidden;
  height: 2.75rem;
}

.nav-scroller nav {
  display: -ms-flexbox;
  display: flex;
  overflow-x: auto;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  margin-top: -1px;
  padding-bottom: 1rem;
  text-align: center;
  white-space: nowrap;
  color: rgba(255, 255, 255, .75);
  -webkit-overflow-scrolling: touch;
}

.img-fit {
  width: 100%;
  height: 100%;
  object-fit: cover;
}

.transform-center {
  margin-left: 50%;
  transform: translateX(-50%);
}

.svg-icon-container.small svg {
  height: 100px;
  margin-top: -1rem;
  margin-bottom: .25rem;
}

.svg-icon-container.blue svg {
  fill: var(--blau);
}

.social-media li {
  width: 114px;
  height: 114px;
  padding: 0;
  transition-duration: .2s;
  transition-property: background-color;
  border: none;
  border-radius: 4rem !important;
  background: none;
}

.social-media li a {
  display: flex;
  flex-direction: column;
  justify-content: center;
  width: 100%;
  height: 100%;
}

.social-media li:hover {
  background-color: #eee;
}

.social-media a {
  text-decoration: none;
  color: #444;
}

.jumbotron {
  display: flex;
  align-items: flex-end;
  min-height: 282px;
}

.email-address {
  margin-bottom: .5rem;
}

.text-translucent {
  color: rgba(255, 255, 255, 0.8);
}

.sticky-toc {
  position: sticky;
  top: 172px;
  max-height: calc(100vh - 198px);
}

.sticky-toc nav {
  overflow: scroll;
  flex-wrap: nowrap;
  max-height: calc(100vh - 246px);
}

.sticky-toc a {
  position: relative;
}

.sticky-toc a.active {
  font-weight: bold;
  transition-duration: .2s;
  transition-property: background-color;
}

.sticky-toc a.active::before {
  position: absolute;
  top: 8px;
  left: 14px;
  display: block;
  width: 3px;
  height: calc(100% - 1rem);
  content: "";
  border-radius: 1.5px;
  background-color: var(--blau);
}

.sticky-toc a.active:hover::before {
  background-color: var(--blau-fosc);
}

img {
  width: 100%;
  height: auto;
}

.dropdown-menu {
  min-width: initial;
}

.container-ratio.ratio--16-9 {
  position: relative;
  overflow: hidden;
  width: 100%;
  padding-top: calc(100% / 16 * 9);
}

.container-ratio.ratio--16-9 iframe {
  position: absolute;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  width: 100%;
  height: 100%;
}

.badge-primary {
  color: #fff;
  background-color: var(--blau);
}

a.badge-primary:hover,
a.badge-primary:focus {
  color: #fff;
  background-color: var(--blau-fosc);
}

a.badge-primary:focus,
a.badge-primary.focus {
  outline: 0;
  box-shadow: 0 0 0 0.2rem var(--blau-80);
}

